--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,29 @@
-h1 {
+.weather-app {
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 20px;
+  border: 1px solid #bdc1c6;
+  border-radius: 5px;
 }
 h1 {
+  color: #878787;
+  font-size: 24px;
+  font: weight 100px;
+  line-height: 28px;
+  margin-bottom: 0;
 }
 
-button {
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #878787;
+  font-size: 16px;
+  font-weight: 50px;
+  line-height: 19px;
 }
