--- a/src/styles.css
+++ b/src/styles.css
@@ -49,7 +49,6 @@ ul {
 }
 
 li {
-  text-transform: capitalize;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -57,6 +56,10 @@ li {
   font-size: 16px;
   font-weight: 50px;
   line-height: 19px;
+}
+
+li ::first-letter {
+  text-transform: capitalize;
 }
 .weather-temperature .units {
   position: relative;
