--- a/src/styles.css
+++ b/src/styles.css
@@ -66,3 +66,10 @@ li ::first-letter {
   font-size: 16px;
   top: -34px;
 }
+.weather-temperature .active {
+  color: #212121;
+  cursor: default;
+}
+.weather-temperature .active :hover {
+  text-decoration: none;
+}
